--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
-certifi==2018.4.16
-click==6.7
+awscli==1.15.85
+botocore==1.10.84
+certifi==2018.10.15
+Click==7.0
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
-itsdangerous==0.24
+gunicorn==19.9.0
+itsdangerous==1.1.0
 Jinja2==2.10
+jmespath==0.9.3
 MarkupSafe==1.0
-numpy==1.14.5
-pandas==0.23.3
-python-dateutil==2.7.3
-pytz==2018.5
+numpy==1.15.3
+pandas==0.23.4
+psycopg2==2.7.5
+pyasn1==0.4.4
+python-dateutil==2.7.5
+pytz==2018.6
+rsa==3.4.2
+s3transfer==0.1.13
 six==1.11.0
-SQLAlchemy==1.2.10
+SQLAlchemy==1.2.12
 Werkzeug==0.14.1
